syntax = "proto3";

package org.example;

option java_multiple_files = true;
option java_package = "org.example";

import "google/protobuf/wrappers.proto";

service JwtService {
  rpc isTokenValid (google.protobuf.StringValue) returns (google.protobuf.BoolValue) {
  }
  rpc getUserEmail (google.protobuf.StringValue) returns (google.protobuf.StringValue) {
  }
}
